--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,7 +22,8 @@
                     <li class="dropdown">
                         <a href="#">Categories</a>
                         <div class="dropdown-content">
-                            <a href="#">Electronics</a>
+                      <a href="electronics.html">Electronics</a>
+
                             <a href="#">Fashion</a>
                             <a href="#">Home & Kitchen</a>
                             <a href="#">Books</a>
@@ -58,7 +58,11 @@
             <div class="category-list">
                 <div class="category-item">
                     <img src="category1.jpg" alt="Electronics">
-                    <p>Electronics</p>
+<a href="electronics.html">
+    <p>Electronics</p>
+</a>
+
+                    
                 </div>
                 <div class="category-item">
                     <img src="category2.jpg" alt="Home & Kitchen">
@@ -132,3 +136,4 @@
 
 </body>
 </html>
+ 
