--- a/products .html
+++ b/products .html
@@ -11,14 +11,12 @@
 
     <!-- Header -->
     <header>
-        <div class="container">
-            <div class="logo">
-                <h1>Takealot Clone</h1>
-            </div>
-            
-            <div class="search-bar">
-                <input type="text" placeholder="Search for products...">
-                <button><i class="fas fa-search"></i></button>
+        <div class="container header-content">
+            <a href="#" class="back-button"><i class="fas fa-arrow-left"></i></a>
+            <h1 class="header-title">Item Name</h1>
+            <div class="header-icons">
+                <a href="#" class="search-button"><i class="fas fa-search"></i></a>
+                <a href="#" class="options-button"><i class="fas fa-ellipsis-v"></i></a>
             </div>
         </div>
     </header>
@@ -55,6 +53,40 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Product Specifications Table -->
+            <<!-- Product Specifications -->
+<<!-- Product Specifications -->
+<section class="product-specifications">
+    <h2>Product Specifications</h2>
+    <div class="specifications-table">
+        <div class="specification">
+            <span class="spec-label">Brand:</span>
+            <span class="spec-value">Brand Name</span>
+        </div>
+        <div class="specification">
+            <span class="spec-label">Warranty:</span>
+            <span class="spec-value">1 Year Limited Warranty</span>
+        </div>
+        <div class="specification">
+            <span class="spec-label">Basic Color:</span>
+            <span class="spec-value">Color Name</span>
+        </div>
+        <div class="specification">
+            <span class="spec-label">Product Size:</span>
+            <span class="spec-value">Size Details</span>
+        </div>
+        <div class="specification">
+            <span class="spec-label">Bar Code:</span>
+            <span class="spec-value">1234567890123</span>
+        </div>
+        <div class="specification">
+            <span class="spec-label">What's Inside the Box:</span>
+            <span class="spec-value">Item 1, Item 2, Item 3</span>
+        </div>
+    </div>
+</section>
+
 
             <!-- Item Suggestions -->
             <section class="item-suggestions">
@@ -93,15 +125,28 @@
             </section>
 
             <!-- Payment Plans -->
-            <section class="payment-plans">
-                <h2>Payment Plans</h2>
-                <p>We offer flexible payment plans. Choose one that suits you:</p>
-                <ul>
-                    <li>Option 1: 3-month installment plan</li>
-                    <li>Option 2: 6-month installment plan</li>
-                    <li>Option 3: 12-month installment plan</li>
-                </ul>
-            </section>
+            <<!-- Payment Plans -->
+<section class="payment-plans">
+    <h2>Payment Plans</h2>
+    <div class="payment-plan-cards">
+        <div class="payment-plan-card">
+            <h3>Option 1</h3>
+            <p>3-month installment plan</p>
+            <a href="#" class="btn-details">Details</a>
+        </div>
+        <div class="payment-plan-card">
+            <h3>Option 2</h3>
+            <p>6-month installment plan</p>
+            <a href="#" class="btn-details">Details</a>
+        </div>
+        <div class="payment-plan-card">
+            <h3>Option 3</h3>
+            <p>12-month installment plan</p>
+            <a href="#" class="btn-details">Details</a>
+        </div>
+    </div>
+</section>
+
 
             <!-- Alternatives -->
             <section class="alternatives">
@@ -123,26 +168,6 @@
         </div>
     </section>
 
-    <!-- Footer -->
-    <footer>
-        <div class="container">
-            <div class="footer-links">
-                <ul>
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Customer Service</a></li>
-                    <li><a href="#">FAQ</a></li>
-                    <li><a href="#">Privacy Policy</a></li>
-                </ul>
-            </div>
-            <div class="social-icons">
-                <a href="#"><i class="fab fa-facebook-f"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
-                <a href="#"><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fab fa-linkedin-in"></i></a>
-            </div>
-            <p>&copy; 2024 Takealot Clone. All rights reserved.</p>
-        </div>
-    </footer>
-
 </body>
-</html>
+    </html>
+    
