Update products .html

--- a/products .html
+++ b/products .html
@@ -40,7 +40,7 @@
                     <p class="description">This is a brief description of the product. It highlights key features, benefits, and specifications.</p>
                     <div class="product-actions">
                         <a href="#" class="btn">Add to Cart</a>
-                        <a href="checkout .html" class="btn">Buy Now</a>
+                        <a href="checkout.html" class="btn">Buy Now</a>
                     </div>
                     <div class="product-warranty">
                         <p>Warranty: 1 Year Limited Warranty</p>
@@ -54,39 +54,36 @@
                 </div>
             </div>
 
-            <!-- Product Specifications Table -->
-            <<!-- Product Specifications -->
-<<!-- Product Specifications -->
-<section class="product-specifications">
-    <h2>Product Specifications</h2>
-    <div class="specifications-table">
-        <div class="specification">
-            <span class="spec-label">Brand:</span>
-            <span class="spec-value">Brand Name</span>
-        </div>
-        <div class="specification">
-            <span class="spec-label">Warranty:</span>
-            <span class="spec-value">1 Year Limited Warranty</span>
-        </div>
-        <div class="specification">
-            <span class="spec-label">Basic Color:</span>
-            <span class="spec-value">Color Name</span>
-        </div>
-        <div class="specification">
-            <span class="spec-label">Product Size:</span>
-            <span class="spec-value">Size Details</span>
-        </div>
-        <div class="specification">
-            <span class="spec-label">Bar Code:</span>
-            <span class="spec-value">1234567890123</span>
-        </div>
-        <div class="specification">
-            <span class="spec-label">What's Inside the Box:</span>
-            <span class="spec-value">Item 1, Item 2, Item 3</span>
-        </div>
-    </div>
-</section>
-
+            <!-- Product Specifications -->
+            <section class="product-specifications">
+                <h2>Product Specifications</h2>
+                <div class="specifications-table">
+                    <div class="specification">
+                        <span class="spec-label">Brand:</span>
+                        <span class="spec-value">Brand Name</span>
+                    </div>
+                    <div class="specification">
+                        <span class="spec-label">Warranty:</span>
+                        <span class="spec-value">1 Year Limited Warranty</span>
+                    </div>
+                    <div class="specification">
+                        <span class="spec-label">Basic Color:</span>
+                        <span class="spec-value">Color Name</span>
+                    </div>
+                    <div class="specification">
+                        <span class="spec-label">Product Size:</span>
+                        <span class="spec-value">Size Details</span>
+                    </div>
+                    <div class="specification">
+                        <span class="spec-label">Bar Code:</span>
+                        <span class="spec-value">1234567890123</span>
+                    </div>
+                    <div class="specification">
+                        <span class="spec-label">What's Inside the Box:</span>
+                        <span class="spec-value">Item 1, Item 2, Item 3</span>
+                    </div>
+                </div>
+            </section>
 
             <!-- Item Suggestions -->
             <section class="item-suggestions">
@@ -125,28 +122,26 @@
             </section>
 
             <!-- Payment Plans -->
-            <<!-- Payment Plans -->
-<section class="payment-plans">
-    <h2>Payment Plans</h2>
-    <div class="payment-plan-cards">
-        <div class="payment-plan-card">
-            <h3>Option 1</h3>
-            <p>3-month installment plan</p>
-            <a href="#" class="btn-details">Details</a>
-        </div>
-        <div class="payment-plan-card">
-            <h3>Option 2</h3>
-            <p>6-month installment plan</p>
-            <a href="#" class="btn-details">Details</a>
-        </div>
-        <div class="payment-plan-card">
-            <h3>Option 3</h3>
-            <p>12-month installment plan</p>
-            <a href="#" class="btn-details">Details</a>
-        </div>
-    </div>
-</section>
-
+            <section class="payment-plans">
+                <h2>Payment Plans</h2>
+                <div class="payment-plan-cards">
+                    <div class="payment-plan-card">
+                        <h3>Option 1</h3>
+                        <p>3-month installment plan</p>
+                        <a href="#" class="btn-details">Details</a>
+                    </div>
+                    <div class="payment-plan-card">
+                        <h3>Option 2</h3>
+                        <p>6-month installment plan</p>
+                        <a href="#" class="btn-details">Details</a>
+                    </div>
+                    <div class="payment-plan-card">
+                        <h3>Option 3</h3>
+                        <p>12-month installment plan</p>
+                        <a href="#" class="btn-details">Details</a>
+                    </div>
+                </div>
+            </section>
 
             <!-- Alternatives -->
             <section class="alternatives">
@@ -167,7 +162,6 @@
             </section>
         </div>
     </section>
-
 </body>
     </html>
     
