Update checkout .html

--- a/checkout .html
+++ b/checkout .html
@@ -9,9 +9,25 @@
 <body>
 
     <!-- Header -->
-    <header>
-        
-    </header>
+   <!-- Header -->
+<<!-- Header -->
+<header>
+    <div class="header-icons">
+        <a href="#" class="back-button">
+            <i class="fas fa-arrow-left"></i>
+        </a>
+        <h1>Item Title</h1>
+        <a href="#" class="heart-button">
+            <i class="fas fa-heart"></i>
+        </a>
+        <a href="#" class="edit-button">
+            <i class="fas fa-edit"></i>
+        </a>
+    </div>
+</header>
+
+
+
 
     <!-- Cart Section -->
     <section class="cart">
@@ -102,4 +118,5 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/js/all.min.js"></script>
 </body>
-</html>
+    </html>
+    
