--- a/electronics.html
+++ b/electronics.html
@@ -10,18 +10,23 @@
 <body>
 
     <!-- Header -->
-    <header>
-        <div class="container">
-            <div class="logo">
-                <h1>Takealot Clone</h1>
-            </div>
-          
-            <div class="search-bar">
-                <input type="text" placeholder="Search for products...">
-                <button><i class="fas fa-search"></i></button>
-            </div>
+    <!-- Header -->
+<header>
+    <div class="container">
+        <div class="logo">
+            <h1>Takealot Clone</h1>
         </div>
-    </header>
+        <div class="search-bar">
+            <input type="text" placeholder="Search for products...">
+            <button><i class="fas fa-search"></i></button>
+        </div>
+        <div class="cart-icon">
+            <a href="#"><i class="fas fa-shopping-cart"></i></a>
+            <span class="cart-count">0</span>
+        </div>
+    </div>
+</header>
+
 
     <!-- Electronics Banner -->
     <section class="banner">
