Update checkout .html

--- a/checkout .html
+++ b/checkout .html
@@ -4,30 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shopping Cart</title>
-    <link rel="stylesheet" href="checkout .css">
+    <link rel="stylesheet" href="checkout.css"> <!-- Fixed CSS file path -->
 </head>
 <body>
 
     <!-- Header -->
-   <!-- Header -->
-<<!-- Header -->
-<header>
-    <div class="header-icons">
-        <a href="#" class="back-button">
-            <i class="fas fa-arrow-left"></i>
-        </a>
-        <h1>Item Title</h1>
-        <a href="#" class="heart-button">
-            <i class="fas fa-heart"></i>
-        </a>
-        <a href="#" class="edit-button">
-            <i class="fas fa-edit"></i>
-        </a>
-    </div>
-</header>
-
-
-
+    <header>
+        <div class="header-icons">
+            <a href="#" class="back-button">
+                <i class="fas fa-arrow-left"></i>
+            </a>
+            <h1>Item Title</h1>
+            <a href="#" class="heart-button">
+                <i class="fas fa-heart"></i>
+            </a>
+            <a href="#" class="edit-button">
+                <i class="fas fa-edit"></i>
+            </a>
+        </div>
+    </header>
 
     <!-- Cart Section -->
     <section class="cart">
@@ -119,4 +114,4 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/js/all.min.js"></script>
 </body>
     </html>
-    
+                
