--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <div class="container">
             <div class="logo">
-                <h1>Takealot Clone</h1>
+                <h1>African plug 🔌</h1>
             </div>
             <nav>
                 <ul>
