--- a/electronics.html
+++ b/electronics.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Electronics - Takealot Clone</title>
+    <title>Electronics - African plug 🔌</title>
     <link rel="stylesheet" href="electronic.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
@@ -14,7 +14,7 @@
 <header>
     <div class="container">
         <div class="logo">
-            <h1>Takealot Clone</h1>
+            <h1>African plug 🔌</h1>
         </div>
         <div class="search-bar">
             <input type="text" placeholder="Search for products...">
