--- a/index.html
+++ b/index.html
@@ -5,43 +5,80 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>African plug 🔌</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
 
     <!-- Header -->
-    <header>
-        <div class="container">
-            <div class="logo">
-                <h1>African plug 🔌</h1>
-            </div>
-            <nav>
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li class="dropdown">
-                        <a href="#">Categories</a>
-                        <div class="dropdown-content">
-                      <a href="electronics.html">Electronics</a>
-
-                            <a href="#">Fashion</a>
-                            <a href="#">Home & Kitchen</a>
-                            <a href="#">Books</a>
-                            <!-- Add more subcategories here -->
-                        </div>
-                    </li>
-                    <li><a href="#">Deals</a></li>
-                    <li><a href="#">Account</a></li>
-                    <li><a href="#">Cart</a></li>
-                </ul>
-            </nav>
-            <div class="search-bar">
-                <input type="text" placeholder="Search for products...">
-                <button><i class="fas fa-search"></i></button>
-            </div>
+<header>
+    <div class="container">
+        <div class="logo">
+            <h1>African Plug 🔌</h1>
         </div>
-    </header>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li class="dropdown">
+                    <a href="#">Categories</a>
+                    <div class="dropdown-content">
+                        <a href="electronics.html">Electronics</a>
+                        <a href="#">Fashion</a>
+                        <a href="#">Home & Kitchen</a>
+                        <a href="#">Books</a>
+                    </div>
+                </li>
+                <li><a href="#">Deals</a></li>
+                 <li><a href="#" id="accountLink">Account</a></li>
+                <li><a href="#">Cart</a></li>
+            </ul>
+        </nav>
+        <div class="search-bar">
+            <input type="text" placeholder="Search for products...">
+            <button><i class="fas fa-search"></i></button>
+        </div>
+    </div>
+</header>
 
+  <!-- Login Modal -->
+    <div id="loginModal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <h2>Login</h2>
+            <form>
+                <label for="username">Username:</label>
+                <input type="text" id="username" name="username" required>
+
+                <label for="password">Password:</label>
+                <input type="password" id="password" name="password" required>
+
+                <button type="submit">Login</button>
+                <p>Don't have an account? <a href="#" id="registerLink">Register here</a></p>
+            </form>
+        </div>
+    </div>
+
+    <!-- Register Modal -->
+    <div id="registerModal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <h2>Register</h2>
+            <form>
+                <label for="newUsername">Username:</label>
+                <input type="text" id="newUsername" name="newUsername" required>
+
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" required>
+
+                <label for="newPassword">Password:</label>
+                <input type="password" id="newPassword" name="newPassword" required>
+
+                <button type="submit">Register</button>
+            </form>
+        </div>
+    </div>
+
+    
     <!-- Banner -->
     <section class="banner">
         <div class="container">
@@ -133,6 +170,7 @@
             <p>&copy; 2024 Takealot Clone. All rights reserved.</p>
         </div>
     </footer>
+<script src="js.js"></script>
 
 </body>
 </html>
