--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
                         <a href="#">Books</a>
                     </div>
                 </li>
-                <li><a href="#">Deals</a></li>
+                <li><a href="deals.html">Deals</a></li>
+                    
                  <li><a href="#" id="accountLink">Account</a></li>
                 <li><a href="#">Cart</a></li>
             </ul>
